# biggr-cli

./: .gitignore  LICENSE  README.md  biggr-cli-0.1.0.r12.gcb1451e-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/biggr_cli/: __init__.py  __main__.py  catalog.py  cli.py  client.py  config.py  core.py  errors.py
tests/: test_catalog.py  test_cli_help.py  test_cli_runtime.py  test_client.py  test_config.py  test_core.py  test_docs_command.py
