[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biggr-cli"
version = "0.1.0"
description = "Production-grade CLI for the BiGGr v3 Data Access API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "BiGGr CLI Maintainers" }
]
dependencies = [
  "httpx>=0.27,<1"
]
keywords = ["biggr", "metabolic-models", "api", "cli", "bioinformatics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://biggr.org"
Documentation = "https://biggr.org/data_access"
Source = "https://github.com/biosustain/biggr"

[project.scripts]
biggr = "biggr_cli.cli:entrypoint"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
